[tool.poetry]
name = "pyapiary"
packages = [{ include = "pyapiary", from = "src" }]
version = "2.0.2"
description = "A simple, lightweight set of connectors and functions to various APIs and DBMSs, controlled by a central broker."
authors = ["Rob D'Aveta <rob.daveta@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/robd518/pyapiary"
repository = "https://github.com/robd518/pyapiary"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.1.1"
pymongo = "^4.15.0"
elasticsearch = "^9.1.1"
splunk-sdk = "^2.1.1"
httpx = "^0.28.1"
tenacity = "^9.1.2"
pyodbc = "^5.3.0"

[tool.poetry.extras]
odbc = ["pyodbc"]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"
pytest = "^8.4.2"
pytest-mock = "^3.15.0"
vcrpy = "^7.0.0"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore=dev_env"
